tests/NormalTests/paczka1/small_fuzzy/54036855.err
Error in line 2: S4 S788 86,9
Error in line 10: S4 S788 133,0
Error in line 12: S4 S570 30,7
